[gd_scene load_steps=29 format=2]

[ext_resource path="res://Healthbar.tscn" type="PackedScene" id=1]
[ext_resource path="res://FinalPlayer.gd" type="Script" id=2]
[ext_resource path="res://VikingAnimations/attack1_4.png" type="Texture" id=3]
[ext_resource path="res://VikingAnimations/run_2.png" type="Texture" id=4]
[ext_resource path="res://VikingAnimations/jump_4.png" type="Texture" id=5]
[ext_resource path="res://VikingAnimations/jump_5.png" type="Texture" id=6]
[ext_resource path="res://VikingAnimations/jump_2.png" type="Texture" id=7]
[ext_resource path="res://VikingAnimations/attack1_6.png" type="Texture" id=8]
[ext_resource path="res://VikingAnimations/jump_1.png" type="Texture" id=9]
[ext_resource path="res://VikingAnimations/ready_3.png" type="Texture" id=10]
[ext_resource path="res://VikingAnimations/ready_6.png" type="Texture" id=11]
[ext_resource path="res://VikingAnimations/run_4.png" type="Texture" id=12]
[ext_resource path="res://VikingAnimations/attack1_3.png" type="Texture" id=13]
[ext_resource path="res://VikingAnimations/run_5.png" type="Texture" id=14]
[ext_resource path="res://VikingAnimations/attack1_1.png" type="Texture" id=15]
[ext_resource path="res://VikingAnimations/attack1_2.png" type="Texture" id=16]
[ext_resource path="res://VikingAnimations/jump_3.png" type="Texture" id=17]
[ext_resource path="res://VikingAnimations/ready_2.png" type="Texture" id=18]
[ext_resource path="res://VikingAnimations/run_3.png" type="Texture" id=19]
[ext_resource path="res://VikingAnimations/attack1_5.png" type="Texture" id=20]
[ext_resource path="res://VikingAnimations/ready_1.png" type="Texture" id=21]
[ext_resource path="res://VikingAnimations/run_6.png" type="Texture" id=22]
[ext_resource path="res://VikingAnimations/ready_4.png" type="Texture" id=23]
[ext_resource path="res://VikingAnimations/run_1.png" type="Texture" id=24]
[ext_resource path="res://VikingAnimations/ready_5.png" type="Texture" id=25]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 21 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 21 ), ExtResource( 18 ), ExtResource( 10 ), ExtResource( 23 ), ExtResource( 25 ), ExtResource( 11 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 4 ), ExtResource( 19 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 22 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 13 ), ExtResource( 3 ), ExtResource( 20 ), ExtResource( 8 ) ],
"loop": true,
"name": "attack",
"speed": 15.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 7 ), ExtResource( 17 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 14.5, 25.75 )

[node name="FinalPlayer" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 264, 196 )
current = true
limit_left = 0
limit_top = 0
limit_right = 624
limit_bottom = 292

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2, 7 )
shape = SubResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 2, 3 )
scale = Vector2( 1.36, 1.44615 )
frames = SubResource( 2 )
animation = "attack"
flip_h = true

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 27.5, 0.75 )
shape = SubResource( 3 )
disabled = true

[node name="Healthbar" parent="." instance=ExtResource( 1 )]
margin_left = -17.0
margin_top = -21.0
margin_right = 22.0
margin_bottom = -17.0

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
